--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://matiasnetto.github.io/obra-social-frontend/",
   "name": "turnos-frontend",
   "version": "0.1.0",
   "private": true,
